--- a/apps/frontend/src/quill.css
+++ b/apps/frontend/src/quill.css
@@ -1,5 +1,7 @@
 .ql-custom-tags.ql-stroke .ql-fill,
-.ql-custom-tags .ql-stroke {
+.ql-custom-tags .ql-stroke,
+.ql-image-placeholder.ql-stroke .ql-fill,
+.ql-image-placeholder .ql-stroke {
   stroke: none !important;
   stroke-width: 2px;
 }
@@ -13,4 +15,15 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 18px;
+}
+
+.ql-image-placeholder::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-image: url("./assets/image-placeholder.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 14px;
 }
